kubernetes-template/dts-template.yml
#   dtst:name of variable in orchestrator:priority in variable form:what to replace
# Namespace

apiVersion: v1
kind: Namespace
metadata:
  name: demos-main #dtst:namespace:10:demos-main
  
---

# Service

apiVersion: v1
kind: Service
metadata:
  name: conversational-dts #dtst:dtsName:1:conversational-dts
  namespace: demos-main #dtst:namespace:10:demos-main
spec:
  selector:
    app: conversational-dts #dtst:dtsName:1:conversational-dts
  ports:
  - name: didcomm
    port: 3001
    targetPort: 3001
    protocol: TCP
  - name: admin
    port: 3000
    targetPort: 3000
    protocol: TCP
  - name: q
    port: 2602
    targetPort: 2602
    protocol: TCP
    
---


# Ingress public

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conversational-dts-public #dtst:dtsName:1:conversational-dts
  namespace: demos-main #dtst:namespace:10:demos-main
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - conversational-dts.demos.2060.io #dtst:urlBase:1:conversational-dts.demos.2060.io
        - q.conversational-dts.demos.2060.io #dtst:urlBase:1:conversational-dts.demos.2060.io
      secretName: public.conversational-dts.demos.2060.io-cert #dtst:urlBase:1:conversational-dts.demos.2060.io
  rules:
    - host: conversational-dts.demos.2060.io #dtst:urlBase:1:conversational-dts.demos.2060.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                 name: conversational-dts #dtst:dtsName:1:conversational-dts
                 port:
                   number: 3001
    - host: q.conversational-dts.demos.2060.io #dtst:urlBase:1:conversational-dts.demos.2060.io
      http:
        paths:
          - path: /avatar.png
            pathType: Prefix
            backend:
              service:
                 name: conversational-dts #dtst:dtsName:1:conversational-dts
                 port:
                   number: 2602

---

# Ingress private

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conversational-dts-ds #dtst:dtsName:1:conversational-dts
  namespace: demos-main #dtst:namespace:10:demos-main
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: "X.X.X.X/32" #dtst:kubernetesPrivateAccessIp:1:X.X.X.X/32
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - q.conversational-dts.demos.2060.io #dtst:urlBase:1:conversational-dts.demos.2060.io
      secretName: ds-conversational-dts.demos.2060.io-cert #dtst:urlBase:1:conversational-dts.demos.2060.io
  rules:
    - host: q.conversational-dts.demos.2060.io #dtst:urlBase:1:conversational-dts.demos.2060.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                 name: conversational-dts #dtst:dtsName:1:conversational-dts
                 port:
                   number: 2602

---


apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: conversational-dts #dtst:dtsName:1:conversational-dts
   namespace: demos-main #dtst:namespace:10:demos-main
   labels:
      app: nginx
spec:
   serviceName: "conversational-dts" #dtst:dtsName::conversational-dts
   replicas: 1 #dtst:replicas:0:1
   selector:
      matchLabels:
         app: conversational-dts #dtst:dtsName::conversational-dts
   template:
      metadata:
         labels:
            app: conversational-dts #dtst:dtsName::conversational-dts
      spec:
         containers:
         -  name: conversational-dts-sa-container #dtst:dtsName::conversational-dts
            image: io2060/2060-service-agent:dev
            imagePullPolicy: Always
            volumeMounts:
            - name: conversational-dts-sa-pv-main #dtst:dtsName:1:conversational-dts
              mountPath: /root/.afj
            ports:
            -  containerPort: 3000
            -  containerPort: 3001
         -  name: conversational-dts-backend-container #dtst:dtsName:1:conversational-dts
            image: io2060/conversational-dts:dev
            imagePullPolicy: Always
            ports:
            -  containerPort: 2602
         -  name: postgres
            image: postgres:15.2
            imagePullPolicy: Always
            ports:
            -  containerPort: 5432
            volumeMounts:
            - name: conversational-dts-pg-pv-main #dtst:dtsName::conversational-dts
              mountPath: /var/lib/postgresql/data
   volumeClaimTemplates: 
   - metadata:
       name: conversational-dts-sa-pv-main #dtst:dtsName::conversational-dts
     spec:
       storageClassName: csi-cinder-classic #dtst:storageClassName:0:csi-cinder-classic
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: conversational-dts-pg-pv-main #dtst:dtsName::conversational-dts
     spec:
       storageClassName: csi-cinder-classic #dtst:storageClassName:0:csi-cinder-classic
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
